// User type/interface
export interface User { id: string; name: string; email: string; }